--- a/code/ztree/index.html
+++ b/code/ztree/index.html
@@ -11,11 +11,11 @@
     <script type="text/javascript" src="http://www.treejs.cn/v3/js/jquery.ztree.excheck.js"></script>
     <script type="text/javascript" src="http://www.treejs.cn/v3/js/jquery.ztree.exedit.js"></script>
     <SCRIPT type="text/javascript">
-        <!--
+      
         var setting = {
             view: {
-                addHoverDom: addHoverDom,
-                removeHoverDom: removeHoverDom,
+                // addHoverDom: addHoverDom,
+                // removeHoverDom: removeHoverDom,
                 selectedMulti: false
             },
             check: {
@@ -16241,7 +16241,7 @@
         function removeHoverDom(treeId, treeNode) {
             $("#addBtn_" + treeNode.tId).unbind().remove();
         };
-        //-->
+        
     </SCRIPT>
 </HEAD>
 
