只返回叶子节点

--- a/code/treeSelect/index.html
+++ b/code/treeSelect/index.html
@@ -51,13 +51,13 @@
         var sexInput = new TreeSelect({
             element: '#sex',
             data: sexNode,
-            valueKey: 'value'
+            valueKey: 'id'
         });
         var depart_input = new TreeSelect({
             url:'area.json',
             type:'get',
             element: '#depart',
-            valueKey: 'value'
+            valueKey: 'id'
         });
     </script>
 </body>
