--- a/code/bootstrap-table/index.html
+++ b/code/bootstrap-table/index.html
@@ -23,7 +23,7 @@
 <div class="container">
     <h1>Table from html</h1>
     <p>Transform table from an existing, unformatted html table.</p>
-    <table id="table"   data-resizable="true"  data-reorderable-columns="true"  >
+    <table id="table"   data-resizable="true"  data-reorderable-columns="true"  data-show-columns="true"   >
         <thead>
         <tr>
             <th data-field="Name" data-halign="center">Name</th>
