--- a/code/table_dragger/dragtable/index.html
+++ b/code/table_dragger/dragtable/index.html
@@ -17,6 +17,7 @@
 <script src="//code.jquery.com/jquery-migrate-1.1.1.js"></script>
 <script type="text/javascript" src="//akottr.github.io/js/jquery.chili-2.2.js"></script>
 <script type="text/javascript" src="jquery.columntoggle.js"></script>
+<script type="text/javascript" src="http://www.bacubacu.com/colresizable/js/colResizable-1.6.min.js"></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,7 +33,7 @@
 <script type="text/javascript">
   $(document).ready(function() {
 
-    $('.defaultTable').dragtable();
+    $('#defaultTable').dragtable();
 
     $('#footerTable').dragtable({excludeFooter:true});
 
@@ -64,6 +65,8 @@
         },
         restoreState: eval('(' + window.sessionStorage.getItem('tableorder') + ')')
     });
+
+     $('#localStorageTable').colResizable();
 
   });
 </script>
