js-async-tutorial

--- a/code/treeSelect/index.html
+++ b/code/treeSelect/index.html
@@ -103,7 +103,7 @@
             // selectedIds: '1,4,5',
             onlyChooseThreeLevel: false,
             checkEnable: true,
-            editEnable: true,
+            editEnable: false,
             isShowInput: false,
             callback: function (data) {
                
