--- a/code/homepage/index.html
+++ b/code/homepage/index.html
@@ -24,7 +24,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img width="140px" height="140px" src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img width="140px" height="140px" src="img/avatar.jpg" alt="" /></span>
 							<h1>王涛的个人主页</h1>
 							<p>WEB&NODE.JS DEVELOPER</p>
 						</header>
